--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"cheerio": "^1.0.0-rc.3",
 		"cloudscraper": "^4.1.0",
 		"request": "^2.88.0",
-		"stremio-addon-sdk": "1.1.x"
+		"stremio-addon-sdk": "1.1.x",
+		"string-similarity": "^3.0.0"
 	}
 }
